--- a/h8dsft_Calculus1.ipynb
+++ b/h8dsft_Calculus1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ee9855a8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3f2d157b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "070854a5",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "2*x + 2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ae700b2b",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "118c67b6",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,8 @@
     }
    ],
    "source": [
-    "y.diff(x)"
+    "j = y.diff(x)\n",
+    "j"
    ]
   },
   {
@@ -150,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b889ae",
+   "id": "4831a9f4",
    "metadata": {},
    "outputs": [],
    "source": []
